Title: Add comprehensive inventory import validation and display tests
Key features implemented:

- New InventoryImportValidationTest.java with comprehensive test coverage for CSV import validation including mixed valid/invalid rows, negative price rejection, duplicate SKU detection, and insufficient inventory checks per SPEC sections 7.3 and 7.4

- New InventoryUploadDisplayTest.java to verify vendor CSV upload workflow and customer UI display of products with images and prices in DoorDash-like interface

- New TEST_CASE_01_InventoryUploadDisplay.md documenting end-to-end inventory upload and display flow with step-by-step test procedures

- New TEST_PLAN.md providing comprehensive test plan covering customer ordering, vendor fulfillment, driver delivery, substitution flows, and inventory management scenarios

- Updated domain-api pom.xml to fix Spring Boot version compatibility issues and dependency conflicts

- Enhanced DasherService.java with improved polygon validation using getFirst/getLast methods instead of indexed access

The test suite now provides complete coverage for inventory management workflows from CSV upload validation through customer display, ensuring robust validation and proper business rule enforcement.